--- a/OSMO-Issue.ipynb
+++ b/OSMO-Issue.ipynb
@@ -375,7 +375,7 @@
     "\n",
     "pd.DataFrame(X.groupby([\"UniqueNominalCode\",\"NominalName\"])[\"ValueB\"].sum().round(3)).query(\"NominalName == 'Creditors Control Account'\")\n",
     "\n",
-    "# Gives -2576.55 difference of 18.22 to the trial balance."
+    "# Gives -2576.55 difference of 18.22 to the trial balance. Same as if counted backwards from Period 1 to get to closing TB of prior year"
    ]
   },
   {
